packages/nestjs-trpc/cli/tests/fixtures/invalid/missing-decorator/plain-class.ts
// This is a valid TypeScript class but NOT a router (no @Router decorator)
export class PlainClass {
    getValue() {
        return 'hello';
    }
}
